weak3_task1/infrastructure/common/alb.tf
resource "aws_lb_target_group" "demo_tg" {
  name     = "demo-tg"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = aws_vpc.demo-vpc.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb" "demo_alb" {
  name               = "demo-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.demo_alb_sg.id]
  subnets            = aws_subnet.demo-public-subnet[*].id
}

resource "aws_lb_listener" "demo_listener" {
  load_balancer_arn = aws_lb.demo_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.demo_tg.arn
  }
}
